Section 7: add missing argument according to Pavel

--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -143,6 +143,19 @@ an application thereof which was omitted from the later versions of the
 paper.}\ , \today}
 \maketitle
 
+\begin{abstract}
+The dual stable Grothendieck polynomials are a deformation of
+the Schur functions, originating in the study of the $K$-theory of the
+Grassmannian. We generalize these polynomials by introducing a
+countable family of additional parameters, and we prove that this
+generalization still defines symmetric functions. For this fact, we
+give two self-contained proofs, one of which constructs a family of
+involutions on the set of reverse plane partitions generalizing the
+Bender-Knuth involutions on semistandard tableaux, whereas the other
+classifies the structure of reverse plane partitions with entries $1$
+and $2$.
+\end{abstract}
+
 \section{Introduction}
 
 Thomas Lam and Pavlo Pylyavskyy, in \cite[\S 9.1]{LamPyl}, (and earlier Mark
